fix scrollbar problem when mobile menu is open

--- a/style/style.css
+++ b/style/style.css
@@ -24,7 +24,7 @@ body {
 
 .overflow-hidden {
     overflow: hidden;
-    padding-right: 17px;
+    padding-right: var(--scrollbar-width);
 }
 
 /* Header */
